added new skills

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <div class="skill">Redux</div>
                 <div class="skill">Git and GitHub</div>
                 <div class="skill">WordPress</div>
+                <div class="skill">Bootstrap</div>
+                <div class="skill">UI/UX Design</div>
+                <div class="skill">SQL</div>
+                <div class="skill">Python</div>
             </div>
         </div>
     </section>
